# claude-autopilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SHOW_HN_POST.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: chief-researcher.md  code-reviewer.md  fix-agent.md  gate-keeper.md  sonnet-executor.md  test-runner.md
docs/: getting-started.md
examples/: 01_event_bus.py  02_approval_queue.py  03_local_reviewer.py  04_worker_pool.py
scripts/: pii_registry.example.yaml  pii_scanner.py
src/claude_autopilot/: __init__.py
src/claude_autopilot/core/: __init__.py  approval_queue.py  atomic_io.py  episodic_log.py  event_bus.py  local_reviewer.py  validators.py  worker_pool.py
src/claude_autopilot/learning/: __init__.py  semantic_memory.py
src/claude_autopilot/orchestration/: __init__.py  auto_trigger.py  big_loop.py  llm_router.py  quality_verifier.py
src/claude_autopilot/reference/: __init__.py  evolution_orchestrator.py  kairos_daemon.py
tests/: conftest.py  test_approval_queue.py  test_atomic_io.py  test_auto_trigger.py  test_big_loop.py  test_episodic_log.py  test_event_bus.py  test_llm_router.py  test_local_reviewer.py  test_quality_verifier.py  test_semantic_memory.py  test_validators.py  test_worker_pool.py
