[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-autopilot"
version = "0.1.0"
description = "From Copilot to Autopilot -- Autonomous multi-agent orchestration for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "labazhou2024"},
]
keywords = ["claude", "claude-code", "autonomous", "multi-agent", "orchestration", "autopilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19.0"]
learning = ["numpy>=1.24.0", "aiosqlite>=0.19.0"]
config = ["PyYAML>=6.0"]
all = [
    "aiosqlite>=0.19.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/labazhou2024/claude-autopilot"
Repository = "https://github.com/labazhou2024/claude-autopilot"
Issues = "https://github.com/labazhou2024/claude-autopilot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/claude_autopilot/reference/*" = ["E501", "E741"]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
